# blockchain-workshop

./: CMakeLists.txt  Dockerfile  README.md
0-setup/: CMakeLists.txt  test-setup.cpp
1-cryptography/: CMakeLists.txt  crypto-test.cpp
2.1-simple-block/: CMakeLists.txt  SimpleBlock.cpp  SimpleBlock.hpp  simple-blockchain.cpp
2.2-blockchain/: CMakeLists.txt  block-test.cpp  node-test.cpp  sign-test.cpp  transaction-test.cpp
2.2-blockchain/blockchain/: Block.cpp  Block.hpp  Node.cpp  Node.hpp  Transaction.cpp  Transaction.hpp  TxInput.cpp  TxInput.hpp  TxOutput.cpp  TxOutput.hpp  Wallet.cpp  Wallet.hpp
lib/logicrypto/: ByteSerializable.hpp  ByteVector.cpp  ByteVector.hpp  CMakeLists.txt  KeyPair.cpp  KeyPair.hpp  logicrypto.cpp  logicrypto.hpp
